[package]
name = "otegami"
version = "0.1.0"
authors = ["Yu Tokunaga <tokunaga@agni.ninja>"]
description = "A smtp client with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"