[package]
name = "denrei"
version = "0.1.0"
authors = ["tokunaga <tokunaga@rhinoceros.com>"]
description = "My SMTP"
license = "MIT/Apache-2.0"
repository = "https://github.com/kustham/nigiri.git"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen =  "0.2.84"
