[package]
name = "denrei"
version = "0.1.0"
authors = ["tokunaga <tokunaga@rhinoceros.com>"]
description = "My SMTP"
license = "MIT/Apache-2.0"
repository = "https://github.com/kustham/nigiri.git"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
base64 = "0.21.0"
wasm-bindgen =  "0.2.84"
wasm-bindgen-futures = "0.4.34"
dotenv = "0.15.0"